Completed timeline, finished organization of other content

--- a/eProfile.html
+++ b/eProfile.html
@@ -173,25 +173,28 @@
     </div>
     <h2>Professional</h2>
 
-    <div>Software Engineering Intern at Milwaukee Tool (2022)</div>
-    <div> Software Engineering Intern at Northrop Grumman (2023)</div>
-    <div>Part-Time Systems Analyst at STL Business & Technology Solutions (2019 to present)</div>
-
     <div class="timeline">
         <div class="container left">
+          <div class="content">
+            <h2 style="background-color: lavender;">2019</h2>
+            <p style="background-color: lavender;">Begin Part-Time Systems Analyst at STL Business & Technology Solutions</p>
+          </div>
+        </div>
+        <div class="container right">
           <div class="content">
             <h2 style="background-color: lavender;">2022</h2>
             <p style="background-color: lavender;">Software Engineering Intern at Milwaukee Tool</p>
           </div>
         </div>
-        <div class="container right">
-          <div class="content">
-            <h2>2016</h2>
-            <p>Lorem ipsum..</p>
+        <div class="container left">
+            <div class="content">
+              <h2 style="background-color: lavender;">2023</h2>
+              <p style="background-color: lavender;">Software Engineering Intern at Milwaukee Tool</p>
+            </div>
           </div>
-        </div>
       </div>
 
+      <br>
 
 
 
@@ -213,7 +216,8 @@
     </div>
 
     <div>
-        Email: <a href = "mailto: gdecker@mail.bradley.edu">gdecker@mail.bradley.edu</a> <br>
+        <br>
+        Email: <a href = "mailto: gdecker@mail.bradley.edu">gdecker@mail.bradley.edu</a> <br><br>
         Cell: (309) 397-9999 <br> <br>
         Available Weekdays 9am - 5 pm
     </div>
